Java: update CI for SDK on multiple java version
Summary:
- Set toolchain local build to java 8.  We've had sourceCompatibility and targetCompatibility on java 8. To make sure the source code(uncompiled one) is also compatible with java 8
- Modify existing APIs to fit java 8 grammer.
- Modify CI on SDK level on java 8, 11, 17, 21

Differential Revision:
D79024070

Privacy Context Container: L1276675

fbshipit-source-id: 5c224a75843e8d611efe529e5a8c08ec80671dc4